apps/course-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app-service
spec:
  type: ClusterIP
  selector:
    app: course-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
